--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
-    <string name="crash_dialog_title">TT-Downloaded has crashed</string>
-    <string name="crash_dialog_text">An unexpected error occurred forcing the
-    application to stop. Please help us fix this by sending us error data,
-    all you have to do is click OK.</string>
-    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
-    <string name="crash_dialog_ok_toast">Thank you !</string>
     <string name="app_name">TT-Downloaded</string>
     <string name="action_settings">Settings</string>
     <string name="searchTextSummit">Suchtext für die Gipfel: </string>
@@ -37,7 +29,7 @@
     <string name="tableColStrUser">"Benutzer: "</string>
     <string name="tableCol_DateOfComment">Kommentardatum: "</string>
     <string name="tableCol_UserGrade">"Bewertung: "</string>
-    <string name="tableCol_Comment">&lt;--Kommentar --&gt;</string>
+    <string name="tableCol_Comment">"&lt;&#8212; Kommentar &#8212;&gt;"</string>
     <string name="INFO">App Info</string>
     <string name="APP_INFO_TEXT">Von Martin Vennekamp\n(vennekamp(at)googlemail.com)\nmit Daten aus\n\'www.teufelsturm.de\' (Nur private Nutzung!)\n\'www.openstreetmap.de\' (via mapsforge)</string>
     <string name="BACKUP_DATA">Export Backup Datei </string>
