Fehlt nur noch der Gipfelkommentar, vorbereiten auf vereinheitlichung aller eigenen Kommentare TODO: "MyTTSummitAND" überall ersetzen durch "MyTTCommentAND"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="ok">Okay</string>
     <string name="no_image">Keine Bilder vorhanden</string>
     <string name="tabLayout_content_description">Gipfel oder Wege oder Kommentar suchen</string>
+    <string name="nur_meine_gipfel">Nur meine\nGipfel</string>
 
 </resources>
